--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -23,16 +23,16 @@
       </div>
     </div>
 
-    <header class="weclome-header">
-      <h1 class="weclome-header__title">Welcome to kakao talk</h1>
-      <p class="weclome-header__text">
+    <header class="welcome-header">
+      <h1 class="welcome-header__title">Welcome to kakao talk</h1>
+      <p class="welcome-header__text">
         카카오 계정이 있으면 이메일 또는 핸드폰 번호로 로그인 하세요.
       </p>
     </header>
 
-    <form id="login-form">
-      <input type="text" placeholder="Email or phonenumber" />
-      <input type="password" placeholder="Password" />
+    <form action="friend.html" method="get" id="login-form">
+      <input name="username" type="text" placeholder="Email or phonenumber" />
+      <input name="password" type="password" placeholder="Password" />
       <input type="submit" value="Log In" />
       <a href="#">Find kakao Acount or Password</a>
     </form>
